# graphql-example

./: .gitignore  README.md
backend/: README.md  flake.nix  makefile  pyproject.toml
backend/backend/: settings.py  urls.py
backend/core/: models.py  urls.py
backend/core/apis/: serializers.py
backend/core/fixtures/: initial_superuser.json
backend/core/graph/: type.py
backend/core/rest_framework/: serializers.py
backend/core/views/: graph.py  graph_type.py  rest_serializers.py  urls.py
backend/person/: models.py
backend/person/api/: serializers.py
backend/person/migrations/: 0001_initial.py
backend/person/views/: graph.py  graph_type.py  rest.py  rest_serializers.py  serializers.py  urls.py
backend/todo/: admin.py  models.py
backend/todo/apis/: serializers.py
backend/todo/migrations/: 0001_initial.py
backend/todo/views/: graph.py  graph_type.py  rest.py  rest_serializers.py  serializers.py  urls.py
frontend/: flake.nix  makefile  package-lock.json  package.json
frontend/src/core/adapters/: graph_model.ts  http.ts  http_backend.ts  rest_model.ts
frontend/src/core/entities/: base.ts
frontend/src/core/exceptions/: errors.ts  handler.ts  index.ts
frontend/src/core/services/: crud_service.ts
frontend/src/core/utils/: url.ts
frontend/src/person/entities/: person.ts
frontend/src/person/repository/: person.ts
frontend/src/person/services/: person.ts
frontend/src/todo/entities/: index.ts  todo.ts  todo_item.ts
frontend/src/views/: HomeView.vue
