[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | venv
    | env
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.poetry]
name = "backend"
version = "0.0.0"
description = ""
authors = ["Imobanco"]
readme = "README.md"
packages = [{include = "**/*.py"}]


[tool.poetry.dependencies]
python = "3.8.*"
Django = "3.2"
djangorestframework = "^3.13.1"
drf-spectacular = "^0.23.1"
graphene-django = "^2.15.0"


[tool.poetry.dev-dependencies]
black = "22.3.0"
isort = "^5.9.2"


[tool.poetry.scripts]
# poetry config --list
[virtualenvs]
virtualenvs.create = true
virtualenvs.in-project = true
virtualenvs.path = "."

